<?xml version="1.0"?>
<package>
  <name>mission_control</name>
  <version>0.0.1</version>
  <description>Mission control for autonomous robots</description>

  <maintainer email="elgar.lepp@gmail.com">norcar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
